Added: GetAllSupplier and GetSupplierById
