# src/controllers/supplier.controller.ts
@@ -1,7 +1,8 @@
-import { Body, Controller, Route, Post, Tags } from "tsoa";
+import { Body, Controller, Route, Post, Tags, Get, Path } from "tsoa";
 import { SupplierResponse } from "@/controllers/types/supplier-response";
 import { SupplierCreateRequest } from "@/controllers/types/supplier-request";
 import { SupplierService } from "@/services/supplier.service";
+import { ISupplier } from "@/database/models/supplier.model";
 
 // Define supplier class
 @Route("v1/supplier")
@@ -14,7 +15,7 @@ export class SupplierController extends Controller {
   public async createSupplier(
     @Body() requestBody: SupplierCreateRequest
   ): Promise<SupplierResponse> {
-    console.log(`Request body:`, requestBody);
+    // console.log(`Request body:`, requestBody);
     try {
       const supplier = await this.supplierService.createSupplier(requestBody);
       console.log(supplier);
@@ -24,6 +25,40 @@ export class SupplierController extends Controller {
       };
     } catch (error) {
       console.error(`Error creating supplier`, error);
+      throw error;
+    }
+  }
+
+  // Get all supplier
+  @Get()
+  public async getAllSupplier(): Promise<{
+    message: string;
+    data: ISupplier[];
+  }> {
+    try {
+      const supplier = await this.supplierService.getAllSupplier();
+      if (!supplier) {
+        throw new Error(`No product available in database.`);
+      }
+      return {
+        message: "Product available",
+        data: supplier,
+      };
+    } catch (error) {
+      throw error;
+    }
+  }
+
+  // Get supplier By Id
+  @Get("{id}")
+  public async getSupplierById(@Path() id: string) {
+    try {
+      const supplier = this.supplierService.getSupplierById(id);
+      if (!supplier) {
+        throw new Error(`Supplier ID:${id} not found`);
+      }
+      return supplier;
+    } catch (error) {
       throw error;
     }
   }
